* RawData 길이 검증 추가 * Exception Handler 수정