@@ -3,20 +3,31 @@ package com.example.demo.exception;
 import com.example.demo.enumeration.ErrorCode;
 import com.example.demo.model.ErrorDto;
 import com.example.demo.model.FieldErrorDto;
+import com.fasterxml.jackson.databind.exc.MismatchedInputException;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.InternalAuthenticationServiceException;
 import org.springframework.security.core.AuthenticationException;
+import org.springframework.web.HttpMediaTypeNotSupportedException;
+import org.springframework.web.HttpRequestMethodNotSupportedException;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
+import org.springframework.web.servlet.NoHandlerFoundException;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.nio.file.AccessDeniedException;
 import java.sql.SQLIntegrityConstraintViolationException;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static com.example.demo.enumeration.ErrorCode.*;
 
@@ -24,13 +35,9 @@ import static com.example.demo.enumeration.ErrorCode.*;
 @Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
-
-/*    @Override
-    protected ResponseEntity<Object> handleHttpRequestMethodNotSupported(HttpRequestMethodNotSupportedException e,
-                                                                         @NonNull HttpHeaders headers,
-                                                                         @NonNull HttpStatusCode status,
-                                                                         @NonNull WebRequest request) {
-        String[] supportedMethods = e.getSupportedMethods();
+    @Override
+    protected ResponseEntity<Object> handleHttpRequestMethodNotSupported(HttpRequestMethodNotSupportedException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+        String[] supportedMethods = ex.getSupportedMethods();
         StringBuilder sb = new StringBuilder();
         sb.append("해당 URI에서 사용가능한 메서드 목록 : ");
         for (String supportedMethod : Objects.requireNonNull(supportedMethods)) {
@@ -40,7 +47,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
 
         final FieldErrorDto fieldErrorDto = FieldErrorDto.builder()
                 .field(sb.toString())
-                .reason("현재 요청 HTTP메서드 : " + e.getMethod())
+                .reason("현재 요청 HTTP메서드 : " + ex.getMethod())
                 .build();
 
         final ErrorDto response = ErrorDto.builder()
@@ -49,29 +56,24 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                 .errors(List.of(fieldErrorDto))
                 .build();
 
-        log.error("[Exception] : {}", e.getMessage(), e);
+        log.error("[Exception] : {}", ex.getMessage(), ex);
         return new ResponseEntity<>(response, HttpStatus.METHOD_NOT_ALLOWED);
     }
 
     @Override
-    protected ResponseEntity<Object> handleHttpMediaTypeNotSupported(
-            @NonNull HttpMediaTypeNotSupportedException e, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
-
+    protected ResponseEntity<Object> handleHttpMediaTypeNotSupported(HttpMediaTypeNotSupportedException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
         final ErrorDto response = ErrorDto.builder()
                 .code(UNSUPPORTED_MEDIA_TYPE.getCode())
                 .build();
 
-        log.error("[Exception] : {}", e.getMessage(), e);
+        log.error("[Exception] : {}", ex.getMessage(), ex);
         return new ResponseEntity<>(response, HttpStatus.UNSUPPORTED_MEDIA_TYPE);
     }
 
-
     // @Valid, @Validated 에서 binding error 발생 시 (@RequestBody)
     @Override
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(
-            MethodArgumentNotValidException e, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
-
-        final List<FieldErrorDto> filedError = e.getBindingResult()
+    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+        final List<FieldErrorDto> filedError = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(error -> {
@@ -81,24 +83,21 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                             .reason(error.getDefaultMessage())
                             .build();
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         final ErrorDto response = ErrorDto.builder()
                 .code(INVALID_INPUT_VALUE.getCode())
                 .errors(filedError)
                 .build();
 
-        log.error("[Exception] : {}", e.getMessage(), e);
+        log.error("[Exception] : {}", ex.getMessage(), ex);
         return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
-
     }
 
     @Override
-    public ResponseEntity<Object> handleNoHandlerFoundException(
-            NoHandlerFoundException e, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
-
+    protected ResponseEntity<Object> handleNoHandlerFoundException(NoHandlerFoundException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
         final FieldErrorDto fieldErrorDto = FieldErrorDto.builder()
-                .field(e.getRequestURL())
+                .field(ex.getRequestURL())
                 .reason("존재하지 않는 URL입니다.")
                 .build();
 
@@ -107,17 +106,15 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                 .errors(List.of(fieldErrorDto))
                 .build();
 
-        log.error("[Exception] : {}", e.getMessage(), e);
+        log.error("[Exception] : {}", ex.getMessage(), ex);
         return new ResponseEntity<>(response, HttpStatus.NOT_FOUND);
     }
 
     @Override
-    public ResponseEntity<Object> handleHttpMessageNotReadable(
-            HttpMessageNotReadableException e, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
-
+    protected ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
         final ErrorDto response;
-
-        if (e.getCause() instanceof MismatchedInputException mismatchedInputException) {
+        if (ex.getCause() instanceof MismatchedInputException) {
+            final MismatchedInputException mismatchedInputException = (MismatchedInputException) ex.getCause();
             final FieldErrorDto fieldErrorDto = FieldErrorDto.builder()
                     .field(mismatchedInputException.getPath().get(0).getFieldName() + "필드의 값이 잘못되었습니다.")
                     .reason("입력 포맷을 확인해 보십시오")
@@ -138,17 +135,14 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                     .build();
         }
 
-        log.error("[Exception] : {}", e.getMessage(), e);
+        log.error("[Exception] : {}", ex.getMessage(), ex);
         return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
     }
 
     @Override
-    public ResponseEntity<Object> handleMissingServletRequestParameter(
-            MissingServletRequestParameterException e, @NonNull HttpHeaders headers,
-            @NonNull HttpStatusCode status, @NonNull WebRequest request) {
-
+    protected ResponseEntity<Object> handleMissingServletRequestParameter(MissingServletRequestParameterException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
         final FieldErrorDto fieldErrorDto = FieldErrorDto.builder()
-                .field("결여된 파라미터 명 : " + e.getParameterName())
+                .field("결여된 파라미터 명 : " + ex.getParameterName())
                 .build();
 
         final ErrorDto response = ErrorDto.builder()
@@ -156,10 +150,10 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                 .errors(List.of(fieldErrorDto))
                 .build();
         return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
-    }*/
+    }
+
 
     //Spring security 오류
-
     @ExceptionHandler
     protected ResponseEntity<ErrorDto> handleBadCredentialException(BadCredentialsException e) {
         final ErrorDto response = ErrorDto.builder()
@@ -247,13 +241,10 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
         return new ResponseEntity<>(response, HttpStatus.CONFLICT);
     }
 
-    // 그 밖에 발생하는 모든 예외처리가 이곳으로 모인다.
-/*    @Override
-    protected ResponseEntity<Object> handleExceptionInternal(
-            Exception e, @Nullable Object body, @NonNull HttpHeaders headers, @NonNull HttpStatusCode statusCode, @NonNull WebRequest request) {
-
+    @Override
+    protected ResponseEntity<Object> handleExceptionInternal(Exception ex, Object body, HttpHeaders headers, HttpStatus status, WebRequest request) {
         final FieldErrorDto fieldErrorDto = FieldErrorDto.builder()
-                .field(e.getClass().getSimpleName())
+                .field(ex.getClass().getSimpleName())
                 .reason("알수 없는 서버 에러발생")
                 .build();
 
@@ -262,9 +253,10 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                 .errors(List.of(fieldErrorDto))
                 .build();
 
-        log.error("[Exception] : {}", e.getMessage(), e);
+        log.error("[Exception] : {}", ex.getMessage(), ex);
         return new ResponseEntity<>(response, HttpStatus.INTERNAL_SERVER_ERROR);
-    }*/
+    }
+
 
     // 비즈니스 요구사항에 따른 Exception
     @ExceptionHandler
